--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@pinia/nuxt": "^0.5.1",
     "nuxt": "^3.11.2",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2"
   },
   "devDependencies": {
+    "@element-plus/nuxt": "^1.0.9",
     "@nuxt/devtools": "^1.3.1",
-    "@unocss/nuxt": "^0.60.3"
+    "@unocss/nuxt": "^0.60.3",
+    "@vueuse/core": "^10.9.0",
+    "@vueuse/nuxt": "^10.9.0",
+    "element-plus": "^2.7.3"
   }
 }
