--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.5.1",
+    "mysql2": "^3.9.7",
     "nuxt": "^3.11.2",
+    "sequelize": "^6.37.3",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2"
   },
@@ -21,6 +23,7 @@
     "@unocss/nuxt": "^0.60.3",
     "@vueuse/core": "^10.9.0",
     "@vueuse/nuxt": "^10.9.0",
-    "element-plus": "^2.7.3"
+    "element-plus": "^2.7.3",
+    "vitest": "^1.6.0"
   }
 }
