--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.5.1",
+    "dayjs": "^1.11.11",
     "mysql2": "^3.9.7",
     "nuxt": "^3.11.2",
     "sequelize": "^6.37.3",
