--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@pinia/nuxt": "^0.5.1",
     "element-plus": "^2.7.3",
+    "markdown-it": "^14.1.0",
     "mysql2": "^3.9.7",
     "nuxt": "^3.11.2",
     "sequelize": "^6.37.3",
@@ -22,6 +23,7 @@
   "devDependencies": {
     "@element-plus/nuxt": "^1.0.9",
     "@nuxt/devtools": "^1.3.1",
+    "@types/markdown-it": "^14.1.1",
     "@unocss/nuxt": "^0.60.3",
     "@vueuse/core": "^10.9.0",
     "@vueuse/nuxt": "^10.9.0",
