--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.5.1",
+    "bcrypt": "^5.1.1",
     "element-plus": "^2.7.3",
+    "jsonwebtoken": "^9.0.2",
     "markdown-it": "^14.1.0",
     "mysql2": "^3.9.7",
     "nuxt": "^3.11.2",
@@ -23,6 +25,8 @@
   "devDependencies": {
     "@element-plus/nuxt": "^1.0.9",
     "@nuxt/devtools": "^1.3.1",
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/markdown-it": "^14.1.1",
     "@unocss/nuxt": "^0.60.3",
     "@vueuse/core": "^10.9.0",
