--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@unocss/nuxt": "^0.60.3",
     "@vueuse/core": "^10.9.0",
     "@vueuse/nuxt": "^10.9.0",
+    "nuxt-icon": "^0.6.10",
     "vitest": "^1.6.0"
   }
 }
