--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@logto/nuxt": "^0.1.12",
     "@pinia/nuxt": "^0.5.1",
     "bcrypt": "^5.1.1",
     "element-plus": "^2.7.3",
